Fixed width overflow bug and socials not glowing bug

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -54,12 +54,12 @@
     margin-left: 0px;
 }
 
-.socials li a {
+.socials li svg {
     color: #ABABAB;
     transition: all 400ms;
 }
 
-.socials li a:hover {
+.socials li svg:hover {
     color: var(--primary-color);
     -webkit-box-shadow: 0px 0px 43px 0.5px rgba(100, 43, 255, 1);
     -moz-box-shadow: 0px 0px 43px 0.5px rgba(100, 43, 255, 1);
